--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbopack",
+		"dev": "next dev -p 1100 --turbopack",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
@@ -11,9 +11,19 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"gray-matter": "^4.0.3",
 		"next": "15.2.2",
+		"path-to-regexp": "^8.2.0",
+		"prismjs": "^1.30.0",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"rehype-highlight": "^7.0.2",
+		"rehype-stringify": "^10.0.1",
+		"remark": "^15.0.1",
+		"remark-html": "^16.0.1",
+		"remark-prism": "^1.3.6",
+		"remark-rehype": "^11.1.1",
+		"rss": "^1.2.2"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.8.0",
@@ -23,8 +33,11 @@
 		"@ricons/ionicons5": "^0.13.0",
 		"@ricons/utils": "^0.1.6",
 		"@types/node": "^20",
+		"@types/prismjs": "^1.26.5",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"@types/remark-prism": "^1.3.7",
+		"@types/rss": "^0.0.32",
 		"eslint": "^9.22.0",
 		"eslint-config-next": "15.2.2",
 		"eslint-config-prettier": "^10.1.1",
