--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"artalk": "^2.9.1",
 		"gray-matter": "^4.0.3",
 		"next": "15.2.2",
 		"path-to-regexp": "^8.2.0",
