--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
 		"rehype-highlight": "^7.0.2",
 		"rehype-stringify": "^10.0.1",
 		"remark": "^15.0.1",
+		"remark-alerts": "^0.0.1",
 		"remark-gfm": "^4.0.1",
 		"remark-html": "^16.0.1",
+		"remark-parse": "^11.0.0",
 		"remark-prism": "^1.3.6",
 		"remark-rehype": "^11.1.1",
-		"rss": "^1.2.2"
+		"rss": "^1.2.2",
+		"unified": "^11.0.5"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.8.0",
