--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"artalk": "^2.9.1",
 		"gray-matter": "^4.0.3",
+		"medium-zoom": "^1.1.0",
 		"next": "15.2.2",
 		"path-to-regexp": "^8.2.0",
 		"prismjs": "^1.30.0",
