--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 		"remark-prism": "^1.3.6",
 		"remark-rehype": "^11.1.1",
 		"rss": "^1.2.2",
-		"unified": "^11.0.5"
+		"unified": "^11.0.5",
+		"unist-util-visit": "^5.0.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.8.0",
