--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "homepage",
-	"version": "1.1.4",
+	"version": "1.1.5",
 	"private": true,
 	"scripts": {
 		"dev": "next dev -p 1100 --turbopack",
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"artalk": "^2.9.1",
+		"clsx": "^2.1.1",
 		"gray-matter": "^4.0.3",
 		"medium-zoom": "^1.1.0",
 		"next": "15.2.2",
