feat: 增加 gravatar 头像，优化可自定义的 icon

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,3 @@
 {
-	"cSpell.words": [
-		"Artalk",
-		"Ichiyō",
-		"ichiyo",
-		"ricons"
-	]
+	"cSpell.words": ["Artalk", "Ichiyō", "ichiyo", "ricons"]
 }
