--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "homepage",
-	"version": "1.1.5",
+	"version": "1.1.6",
 	"private": true,
 	"scripts": {
 		"dev": "next dev -p 1100 --turbopack",
@@ -14,6 +14,7 @@
 		"artalk": "^2.9.1",
 		"clsx": "^2.1.1",
 		"gray-matter": "^4.0.3",
+		"md5": "^2.3.0",
 		"medium-zoom": "^1.1.0",
 		"next": "15.2.2",
 		"path-to-regexp": "^8.2.0",
@@ -40,6 +41,7 @@
 		"@ricons/fa": "^0.13.0",
 		"@ricons/ionicons5": "^0.13.0",
 		"@ricons/utils": "^0.1.6",
+		"@types/md5": "^2.3.5",
 		"@types/node": "^20",
 		"@types/prismjs": "^1.26.5",
 		"@types/react": "^19",
