--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
 			"@/*": ["./src/*"],
 			"@/components/*": ["./src/app/components/*"],
 			"@/public/*": ["./public/*"],
-			"@/lib/*": ["./src/app/lib/*"],
+			"@/lib/*": ["./src/app/lib/*"]
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
