--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "homepage",
-	"version": "1.2.0",
+	"version": "1.2.1",
 	"private": true,
 	"scripts": {
 		"dev": "next dev -p 1100 --turbopack",
@@ -17,6 +17,7 @@
 		"md5": "^2.3.0",
 		"medium-zoom": "^1.1.0",
 		"next": "15.2.2",
+		"nextjs-toploader": "^3.8.16",
 		"path-to-regexp": "^8.2.0",
 		"prismjs": "^1.30.0",
 		"react": "^19.0.0",
