--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"@tabler/icons-react": "^3.33.0",
+		"@tailwindcss/cli": "^4.1.7",
 		"artalk": "^2.9.1",
 		"clsx": "^2.1.1",
 		"gray-matter": "^4.0.3",
 		"md5": "^2.3.0",
 		"medium-zoom": "^1.1.0",
+		"motion": "^12.12.1",
 		"next": "15.2.2",
 		"nextjs-toploader": "^3.8.16",
 		"path-to-regexp": "^8.2.0",
@@ -32,6 +35,8 @@
 		"remark-prism": "^1.3.6",
 		"remark-rehype": "^11.1.1",
 		"rss": "^1.2.2",
+		"tailwind-merge": "^3.3.0",
+		"tailwindcss": "^4.1.7",
 		"unified": "^11.0.5",
 		"unist-util-visit": "^5.0.0"
 	},
@@ -42,6 +47,7 @@
 		"@ricons/fa": "^0.13.0",
 		"@ricons/ionicons5": "^0.13.0",
 		"@ricons/utils": "^0.1.6",
+		"@tailwindcss/postcss": "^4.1.7",
 		"@types/md5": "^2.3.5",
 		"@types/node": "^20",
 		"@types/prismjs": "^1.26.5",
@@ -49,6 +55,7 @@
 		"@types/react-dom": "^19",
 		"@types/remark-prism": "^1.3.7",
 		"@types/rss": "^0.0.32",
+		"autoprefixer": "^10.4.21",
 		"eslint": "^9.22.0",
 		"eslint-config-next": "15.2.2",
 		"eslint-config-prettier": "^10.1.1",
