--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
 		"prepare": "husky"
 	},
 	"dependencies": {
+		"@react-spring/web": "^10.0.1",
 		"@tabler/icons-react": "^3.33.0",
 		"@tailwindcss/cli": "^4.1.7",
 		"artalk": "^2.9.1",
 		"clsx": "^2.1.1",
+		"framer-motion": "^12.12.1",
 		"gray-matter": "^4.0.3",
 		"md5": "^2.3.0",
 		"medium-zoom": "^1.1.0",
