feat: 优化了一些细节表现：时间线与 footer logo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-	"cSpell.words": ["Artalk", "Ichiyō", "ichiyo", "ricons"]
+	"cSpell.words": [
+		"Artalk",
+		"Bilibili",
+		"Ichiyō",
+		"ichiyo",
+		"ricons"
+	]
 }
