--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"prismjs": "^1.30.0",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
+		"react-icons": "^5.5.0",
 		"rehype-highlight": "^7.0.2",
 		"rehype-stringify": "^10.0.1",
 		"remark": "^15.0.1",
