chore: 增加一些动画组件依赖

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,3 @@
 {
-	"cSpell.words": [
-		"Artalk",
-		"Bilibili",
-		"Ichiyō",
-		"ichiyo",
-		"ricons"
-	]
+	"cSpell.words": ["Artalk", "Bilibili", "Ichiyō", "ichiyo", "ricons"]
 }
