--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "homepage",
-	"version": "1.2.4",
+	"version": "1.2.5",
 	"private": true,
 	"scripts": {
 		"dev": "next dev -p 1100 --turbopack",
@@ -12,12 +12,15 @@
 	},
 	"dependencies": {
 		"@react-spring/web": "^10.0.1",
+		"@react-three/drei": "^10.2.0",
+		"@react-three/fiber": "^9.1.2",
 		"@tabler/icons-react": "^3.33.0",
 		"@tailwindcss/cli": "^4.1.7",
 		"artalk": "^2.9.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^12.12.1",
 		"gray-matter": "^4.0.3",
+		"gsap": "^3.13.0",
 		"md5": "^2.3.0",
 		"medium-zoom": "^1.1.0",
 		"motion": "^12.12.1",
@@ -40,6 +43,7 @@
 		"rss": "^1.2.2",
 		"tailwind-merge": "^3.3.0",
 		"tailwindcss": "^4.1.7",
+		"three": "^0.177.0",
 		"unified": "^11.0.5",
 		"unist-util-visit": "^5.0.0"
 	},
