--- a/.gitignore
+++ b/.gitignore
@@ -47,8 +47,8 @@ yarn-error.log*
 next-env.d.ts
 
 
-src/app/blog/post/*.md
-src/app/blog/post/**/*.md
+src/app/blog/post/*
+src/app/blog/post/*
 /public/data/friends.json
 /public/data/projects.json
 /public/data/slides.json
